# media-processing-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  logging.py  main.py  middlewares.py  routes.py  schemas.py  utils.py
src/embedding_subtitles/: dependencies.py  enums.py  exceptions.py  routes.py  service.py
src/exceptions/: handlers.py
